--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,15 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
+    /*Experienced problems with syncing and the build config. Solution found on stackoverflow
+    * Entry: https://stackoverflow.com/questions/44546849/unsupported-method-baseconfig-getapplicationidsuffix
+    * Users: https://stackoverflow.com/users/1460955/exts and
+    * https://stackoverflow.com/users/4890409/rakan-habab
+    * Date: 2018-09-22 */
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.android.tools.build:gradle:3.1.4'
     }
 }
 
