--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         }
     }
 
+
     buildTypes {
         release {
             minifyEnabled false
@@ -21,3 +22,6 @@ android {
         }
     }
 }
+
+dependencies {
+    implementation 'com.google.code.gson:gson:2.8.2'}
